# exergy-analyst

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml  render.yaml  start.sh
corpus/: README.md  file_type_processing.md  public_upload_corpus_manifest.json  submission_test_cases.md
docs/: AGENT_ARCHITECTURE.md  BREAKTHROUGH_ENGINE_MIGRATION_BLUEPRINT.md  PRODUCT.md  QUALITY_BAR.md
examples/: district_heating_sample.csv  industrial_waste_heat_sample.csv
scripts/: download_public_corpus.py
src/exergy_analyst/: __init__.py  __main__.py  agent.py  agent_run.py  analysis.py  brief.py  claims.py  cli.py  config.py  exergy.py  file_inventory.py  general_advice.py  heat_pump_spec.py  ingest.py  models.py  pdf_extract.py  physical_reasoning.py  power_plant_spec.py  quality.py  solar_pv_spec.py  submission.py
tests/: test_agent_run.py  test_analysis.py  test_brief.py  test_corpus_manifest.py  test_exergy.py  test_heat_pump_spec.py  test_ingest.py  test_pdf_extract.py  test_physical_reasoning.py  test_power_plant_spec.py  test_product_architecture.py  test_quality.py  test_solar_pv_spec.py  test_submission.py  test_workspace_migration.py
workspace/: .dockerignore  .env.local.example  README.md  dev.sh  jest.config.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json
workspace/docker/: agent-workspace.Dockerfile
workspace/e2e/: chat-upload-analysis.spec.ts
workspace/scripts/: build-agent-sandbox.sh  check-agent-sandbox.sh  run-agent-stress-campaign.mjs  run-major-stress-campaign.mjs
workspace/src/: middleware.ts
(+313 files in other folders)
