[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "exergy-analyst"
version = "0.1.0"
description = "Exergy-aware analysis agent foundation for messy energy and engineering data."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Christopher DiMurro" }]
dependencies = []

[project.optional-dependencies]
agent = ["deepagents", "langchain-openai", "langgraph"]
parsers = [
  "ezdxf>=1.3",
  "h5py>=3.10",
  "netCDF4>=1.6",
  "odfpy>=1.4",
  "openpyxl>=3.1",
  "pandas>=2.2",
  "pdfplumber>=0.11",
  "pyarrow>=16",
  "python-docx>=1.1",
  "python-pptx>=1.0",
  "pymupdf>=1.24",
  "pypdf>=5",
  "pyyaml>=6.0",
]
dev = ["pytest>=8"]

[project.scripts]
exergy-analyst = "exergy_analyst.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
